# LLM

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
api/v1/: __init__.py
api/v1/process/: __init__.py  process.py
api/v1/query/: __init__.py  query.py
app/controllers/: __init__.py  process.py  query.py
app/services/: __init__.py  utils.py
core/: server.py  shared_state.py
core/shared/: __init__.py  global.py
